syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message DeleteRecipeTranslationRequest {
  string recipeId = 1;
  string requesterId = 2;
  string language = 3;
}

message DeleteRecipeTranslationResponse {
  string message = 1;
}
